# master-board

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  sdkconfig  sdkconfig.defaults
.github/workflows/: nix-sdk-ci.yml  ros-ci.yml  ros-humble-ci.yml  ros-jazzy-ci.yml  ros-rolling-ci.yml
components/direct_ethernet/: Kconfig.projbuild  direct_ethernet.c  direct_ethernet.h
components/direct_wifi/: Kconfig.projbuild  direct_wifi.c  direct_wifi.h
components/my_ethernet/: Kconfig.projbuild  component.mk  my_ethernet.c  my_ethernet.h
components/quad_crc/: quad_crc.c  quad_crc.h
components/spi_manager/: spi_manager.c  spi_manager.h  spi_quad_packet.c  spi_quad_packet.h
documentation/: BLMC_µDriver_SPI_interface.md  README_Master_Board_Communication.md  README_interface.md  README_quadruped_master_board.md  masterboard_communication.md  masterboard_ordering_soldering  masterboard_state_machine.md  masterboard_wiring.md
firmware/: README.md  sdkconfig  sdkconfig.defaults  setup_esp_idf.bash
firmware/components/direct_ethernet/: direct_ethernet.c  direct_ethernet.h
firmware/components/direct_wifi/: Kconfig.projbuild  direct_wifi.c  direct_wifi.h
firmware/components/quad_crc/: quad_crc.c  quad_crc.h
firmware/components/spi_manager/: Kconfig.projbuild  spi_manager.c  spi_manager.h  spi_quad_packet.c  spi_quad_packet.h
firmware/components/uart_imu/: uart_imu.c  uart_imu.h
firmware/components/ws2812b_led/: README.md  ws2812_led_control.c  ws2812_led_control.h
firmware/main/: Kconfig.projbuild  defines.h  masterboard_main.c
hardware/: README.md
hardware/V1/: eagle.epf  esp32_master_board.brd  esp32_master_board.cam  esp32_master_board.sch
hardware/V1/lib/: ESP32.lbr  MAX15062AATA.lbr  crystals.lbr
hardware/V2/: eagle.epf  esp32_master_board.brd  esp32_master_board.csv  esp32_master_board.sch
hardware/V2/lib/: ESP32.lbr  HR911105A.lbr  HR911105A_bis.lbr  LPS4018-333MRC.lbr  LPS6235-153MRB.lbr  LPS6235-682MRB.lbr  MAX17502EATB+T.lbr  SamacSys_Parts.lbr  WS2812B.lbr  m-pad-2.1.lbr  microchip-smsc-lan8720.lbr  resistor.lbr
hardware/V2/production_files/: esp32_master_board.mnb  esp32_master_board.mnt  seeed_BOM.csv
hardware/lib/: HR911105A.lbr  TPS560430XDBVR.lbr
main/: Kconfig.projbuild  masterboard_main.c
master_board_sdk/: CMakeLists.txt  README.md  package.xml
scripts/src/: main.cpp
scripts/src/Includes/: spi_quad_packet.h
sdk/: CMakeLists.txt  Makefile  README.md  setup_wifi.sh
sdk/example/: example.cpp
sdk/include/: defines.h
sdk/master_board_sdk/: CMakeLists.txt  Makefile  README.md  package.xml
sdk/master_board_sdk/benchmark/: communication_benchmark.cpp  communication_benchmark.py  communication_benchmark_data_reader.py  communication_benchmark_plotter.py
sdk/master_board_sdk/example/: CMakeCache.txt  README.md  com_analyser.py  example.cpp  example.py  example_imu_data_collection.cpp  example_imu_plotting.py  example_pd.cpp  latency.py  listener.py
sdk/master_board_sdk/include/: ESPNOW_manager.h  motor.h
sdk/master_board_sdk/include/master_board_sdk/: ESPNOW_manager.h  ESPNOW_types.h  ETHERNET_manager.h  ETHERNET_types.h  Link_manager.h  defines.h  master_board_interface.h  motor.h  motor_driver.h  protocol.h
sdk/master_board_sdk/include/master_board_sdk/benchmark/: communication_data.hpp  execute_bash_command.hpp  latency_estimator.hpp  pd.hpp  real_time_thread.hpp  real_time_timer.hpp
sdk/master_board_sdk/src/: ESPNOW_manager.cpp  ESPNOW_types.cpp  ETHERNET_types.cpp  Link_manager.cpp  master_board_interface.cpp  motor.cpp  motor_driver.cpp
sdk/master_board_sdk/srcpy/: master-board-sdk-py.pc.cmake  my_bindings_headr.cpp  my_bindings_headr.h
sdk/master_board_sdk/test_master_board_state_machine/: test_master_board_state_machine.py
sdk/master_board_sdk/tests/: test_protocol.cpp
sdk/master_board_sdk_catkin/: CMakeLists.txt  README.md  package.xml
sdk/scripts/: setup_wifi.sh
sdk/src/: main.cpp  master_board_interface.cpp  motor_driver.cpp
sdk/src/Includes/: ETHERNET_manager.h  Link_manager.h  defines.h  master_board_interface.h  motor_driver.h  protocol.h  spi_quad_packet.h
sdk/srcpy/: master-board-sdk-py.pc.cmake
software/: Makefile  README.md  sdkconfig  sdkconfig.defaults
software/components/direct_ethernet/: Kconfig.projbuild  direct_ethernet.c
software/components/direct_wifi/: Kconfig.projbuild
software/components/spi_manager/: spi_manager.c  spi_manager.h  spi_quad_packet.c  spi_quad_packet.h
software/components/uart_imu/: uart_imu.c  uart_imu.h
software/main/: Kconfig.projbuild  defines.h  masterboard_main.c
software/scripts/: IMU_vs_ENC.kst
software/scripts/src/: main.cpp
software/scripts/src/Includes/: defines.h  spi_quad_packet.h
