<?xml version="1.0"?>
<package>
  <name>master_board_sdk</name>
  <version>1.0.0</version>
  <description>Catkin nutshell around the master-board-sdk package.</description>
  <maintainer email="mnaveau@tue.mpg.de"> Maximilien Naveau</maintainer>
  <license>BSD 3-Clause</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- This provide cmake macros to help building the project. -->
  <build_depend> mpi_cmake_modules </build_depend>

  <export>
  </export>
</package>
